# strategy-engine-py

./: .gitignore  README.md  build-binary.sh  config.example.toml  pyproject.toml  requirements.txt
app/: main.py
app/application/: simulation.py
app/application/ports/driven/: candle_source.py  journal.py
app/domain/: __init__.py  candle.py  config_port.py  logger_port.py
app/domain/primitives/: __init__.py  log_return.py  moving_average.py  rolling_condition_counter.py  rolling_max.py  rolling_median.py  standard_deviation.py  variance.py  z_score.py
app/domain/specifications/: discount.py  euphoria.py  high_volatility.py  positive_trend.py
app/domain/state/: __init__.py  action.py  position.py  readiness.py
app/domain/strategies/: interface.py  mean_reversion.py  random.py
app/infrastructure/common/: path.py
app/infrastructure/driven/candle_source/: csv.py
app/infrastructure/driven/config/: __init__.py  _impl.py
app/infrastructure/driven/journal/: csv.py
app/infrastructure/driven/logger/: __init__.py  (+1 more)
src/: main.py
src/application/: simulation.py
src/domain/: __init__.py  candle.py  strategy_engine.py
src/domain/primitives/: __init__.py  log_return.py  moving_average.py  rolling_condition_counter.py  rolling_max.py  rolling_median.py  standard_deviation.py  z_score.py  zscore.py
src/domain/specifications/: __init__.py  discount.py  euphoria.py  high_volatility.py  positive_trend.py
src/domain/state/: __init__.py
src/domain/strategies/: __init__.py  interface.py  mean_reversion.py  random.py
src/infrastructure/common/: path.py
(+8 files in other folders)
