[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strategy-engine"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  # Add your requirements here
]

[project.optional-dependencies]
dev = [
  "build", # Required to run `python -m build`
]

[project.scripts]
# This tells python that "python -m app.main" is the entry
strategy-engine = "app.main:main"

# VITAL: This maps your folder structure correctly
[tool.hatch.build.targets.wheel]
packages = ["app"]
